Заканчивает шапку сайта

--- a/source/sass/global/reboot.scss
+++ b/source/sass/global/reboot.scss
@@ -14,9 +14,10 @@ body {
 html {
   font-style: normal;
   font-weight: 400;
+  min-width: $vp-1200;
   font-size: $fz-default;
-  line-height: 24px;
-  font-family: $ff-placeholder;
+  line-height: 27px;
+  font-family: $ff-roboto;
   color: $color-default-black;
 
   -webkit-font-smoothing: antialiased;
