--- a/source/sass/global/fonts.scss
+++ b/source/sass/global/fonts.scss
@@ -1,8 +1,8 @@
 @font-face {
-  font-style: normal;
+  font-family: "Roboto";
+  src: url("../../fonts/Roboto-Regular.woff2") format("woff2"),
+    url("../../fonts/Roboto-Regular.woff") format("woff");
   font-weight: 400;
-  font-family: "";
-
+  font-style: normal;
   font-display: swap;
-  src: url("../fonts/.woff2") format("woff2");
 }
