--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -23,6 +23,10 @@
 @import "blocks/custom-input";
 @import "blocks/custom-toggle";
 @import "blocks/custom-select";
+@import "blocks/main-header.scss";
+@import "blocks/site-navigation.scss";
+@import "blocks/user-navigation.scss";
+@import "blocks/link-item.scss";
 
 // ---------------------------------
 
