Заканчивает блок bestsellers на главной странице

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -27,6 +27,9 @@
 @import "blocks/site-navigation.scss";
 @import "blocks/user-navigation.scss";
 @import "blocks/link-item.scss";
+@import "blocks/promo.scss";
+@import "blocks/bestsellers.scss";
+@import "blocks/show-more.scss";
 
 // ---------------------------------
 
