--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -5,6 +5,7 @@
 
 $color-default-black:               #444240;
 $color-link-item:                   #555248;
+$color-secondary-black:             #1b1a17;
 $color-default-white:               #ffffff;
 $color-transparent:                 rgba(255, 255, 255, 0);
 
@@ -28,6 +29,8 @@ $fz-default:                        16px;
 // https://www.artlebedev.ru/kovodstvo/sections/159/#13
 $ff-rouble:                         "Rouble", "Arial", sans-serif;
 $ff-roboto:                         "Roboto", "Arial", sans-serif;
+$ff-playfair:                       "Playfair Display", "Arial", sans-serif;
+$ff-prata:                          "Prata", "Arial", sans-serif;
 
 $ff-placeholder:                    "Placeholder", "Arial", sans-serif;
 
