--- a/source/sass/global/fonts.scss
+++ b/source/sass/global/fonts.scss
@@ -6,3 +6,20 @@
   font-style: normal;
   font-display: swap;
 }
+
+@font-face {
+  font-family: "Playfair Display";
+  src: url("../../fonts/PlayfairDisplay-Regular.woff2") format("woff2"),
+    url("../../fonts/PlayfairDisplay-Regular.woff") format("woff");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Prata";
+  src: url("../../fonts/Prata-Regular.woff2") format("woff2");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
