Заканчивает главную страницу 3 кейса

--- a/source/sass/global/utils.scss
+++ b/source/sass/global/utils.scss
@@ -1,5 +1,8 @@
 .site-navigation,
-.user-navigation {
+.user-navigation,
+.catalog-list,
+.social,
+.main-footer-list {
   list-style: none;
   padding: 0;
   margin: 0;
