--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -30,6 +30,12 @@
 @import "blocks/promo.scss";
 @import "blocks/bestsellers.scss";
 @import "blocks/show-more.scss";
+@import "blocks/catalog.scss";
+@import "blocks/banner.scss";
+@import "blocks/news.scss";
+@import "blocks/social.scss";
+@import "blocks/main-footer.scss";
+@import "blocks/button.scss";
 
 // ---------------------------------
 
