--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -6,8 +6,11 @@
 $color-default-black:               #444240;
 $color-link-item:                   #555248;
 $color-secondary-black:             #1b1a17;
+$color-third-black:                 rgba(27, 26, 23, 0.82);
 $color-default-white:               #ffffff;
+$color-secondary-white:             #d4b098;
 $color-transparent:                 rgba(255, 255, 255, 0);
+
 
 // Project palette
 // для нейминга цветов используем https://www.htmlcsscolor.com/hex/334482
