--- a/source/sass/global/utils.scss
+++ b/source/sass/global/utils.scss
@@ -2,7 +2,9 @@
 .user-navigation,
 .catalog-list,
 .social,
-.main-footer-list {
+.main-footer-list,
+.breadcrumbs,
+.pagination {
   list-style: none;
   padding: 0;
   margin: 0;
