--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -9,6 +9,8 @@ $color-secondary-black:             #1b1a17;
 $color-third-black:                 rgba(27, 26, 23, 0.82);
 $color-default-white:               #ffffff;
 $color-secondary-white:             #d4b098;
+$color-light-black:                 #727a82;
+$color-pagination:                  #b6b6b6;
 $color-transparent:                 rgba(255, 255, 255, 0);
 
 
