--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -36,6 +36,9 @@
 @import "blocks/social.scss";
 @import "blocks/main-footer.scss";
 @import "blocks/button.scss";
+@import "blocks/breadcrumbs.scss";
+@import "blocks/filters.scss";
+@import "blocks/pagination.scss";
 
 // ---------------------------------
 
