Заканчивает страницу с каталогом

--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -14,4 +14,10 @@
   &--light-button {
     background-color: $color-secondary-white;
   }
+
+  &--white-button {
+    background-color: $color-default-white;
+    border: 2px solid $color-pagination;
+    color: $color-default-black;
+  }
 }
