--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -39,6 +39,7 @@
 @import "blocks/breadcrumbs.scss";
 @import "blocks/filters.scss";
 @import "blocks/pagination.scss";
+@import "blocks/accessories.scss";
 
 // ---------------------------------
 
