--- a/source/sass/global/utils.scss
+++ b/source/sass/global/utils.scss
@@ -4,7 +4,9 @@
 .social,
 .main-footer-list,
 .breadcrumbs,
-.pagination {
+.pagination,
+.bookmarks-list,
+.card-photo-preview {
   list-style: none;
   padding: 0;
   margin: 0;
