--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -40,6 +40,9 @@
 @import "blocks/filters.scss";
 @import "blocks/pagination.scss";
 @import "blocks/accessories.scss";
+@import "blocks/card.scss";
+@import "blocks/bookmarks-list.scss";
+@import "blocks/similar.scss";
 
 // ---------------------------------
 
