--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -11,7 +11,10 @@ $color-default-white:               #ffffff;
 $color-secondary-white:             #d4b098;
 $color-light-black:                 #727a82;
 $color-pagination:                  #b6b6b6;
+$color-lighter:                     #fdfdfb;
 $color-transparent:                 rgba(255, 255, 255, 0);
+$color-darker:                      rgba(100, 100, 100, 0.15);
+$color-light-grey:                  #686868;
 
 
 // Project palette
